--- a/project.css
+++ b/project.css
@@ -172,3 +172,9 @@ input::placeholder{
         background-color: aliceblue;
     }
 }
+@media (max-width:415px) {
+    .calculator{
+        width: 380px;
+    column-gap: 10px;
+    }
+}
